# kube-watcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yaml  test.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  serviceaccount.yaml
src/: config.rs  main.rs  watcher.rs
src/k8s/: api_resource.rs  dynamic_object.rs  mod.rs
src/notifier/: http_notification.rs  mod.rs  sns_notification.rs  sqs_notification.rs
