[package]
name = "kube-watcher"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.39" }
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive", "color"] }
config = { version = "0.14", features = ["json", "yaml", "toml"] }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
log = { version = "0.4" }
kube = { version = "0.93", features = ["runtime", "derive", "rustls-tls", "gzip"] }
k8s-openapi = { version = "0.22", features = ["latest"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12" }
reqwest-middleware = { version = "0.3" }
reqwest-retry = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.5.2", features = ["serde"] }
tokio-graceful-shutdown = { version = "0.15.1" }
